# hqbot

./: .gitignore  Dockerfile  docker_entrypoint.sh  pyproject.toml  template_hqbot.json
.github/workflows/: deploy.yml
hqbot/: __init__.py  __main__.py  config.py  console.py  hqbot.py
hqbot/cogs/: core.py  music.py
tests/: __init__.py  test_hqbot.py
